css overflow fix

--- a/src/layouts/DefaultLayout.scss
+++ b/src/layouts/DefaultLayout.scss
@@ -50,7 +50,8 @@
 .PG {
   font-family: $love-ya-like-a-sister;
   color: $background-primary;
-  font-size: 3rem;
+  font-size: 2.2rem;
+  
 }
 @media (min-width: 768px) {
   #container-layout {
@@ -64,7 +65,7 @@
     font-size: 3rem;
   }
   .PG {
-    font-size: 2.5rem;
+    font-size: 2.24rem;
   }
 }
 @media (min-width: 992px) {
