--- a/src/pages/View.scss
+++ b/src/pages/View.scss
@@ -25,7 +25,7 @@
     .pagination {
       font-family: $roboto;
     }
-    // handle pagination 
+    // handle pagination
     button {
       border: none;
       background: none;
@@ -113,12 +113,23 @@
     .page-content {
       margin-left: 2em;
       margin-right: 2em;
+      padding-bottom: 5em;
+      overflow: auto;
+      height: -webkit-fill-available;
       .page-body {
-        margin-top: 50%;
-        .sentenceSpeech {
+        overflow: hidden;
+        word-break: break-word;
+        height: -webkit-fill-available;
+        // margin-top: 50%;
+        .sentence-speech {
+          margin-top: 1.1em;
         }
         .page-text {
+          overflow: auto;
+          // position: absolute;
           .page-word {
+            // overflow: auto;
+
             transition: all 0.1s ease-in-out;
             &.chameleon,
             &.chameleons {
@@ -133,7 +144,7 @@
             }
             &:hover {
               color: $background-tertiary;
-              transform: scale(1.1);
+              transform: scale(1.5);
               cursor: pointer;
             }
           }
